--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,11 @@ repositories {
     maven {url = "https://dl.bintray.com/astrarre/maven"}
 }
 
+wrapper {
+    gradleVersion = '6.7.1'
+    distributionType = Wrapper.DistributionType.ALL
+}
+
 minecraft {
 }
 
@@ -23,11 +28,17 @@ dependencies {
     mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
     modCompile "net.fabricmc:fabric-loader:${project.loader_version}"
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
+    compileOnly files('generated/api.jar')
+    compileOnly files('generated/api_sources.jar')
+    runtime files('generated/impl.jar')
 }
 
 
 processResources {
     inputs.property "version", project.version
+    from(sourceSets.main.output.classesDirs.singleFile) {
+        include "nanoevents/**"
+    }
 
     from(sourceSets.main.resources.srcDirs) {
         include "fabric.mod.json"
@@ -63,10 +74,12 @@ jar {
 publishing {
     publications {
         mavenJava(MavenPublication) {
+            // remap jar task is where you should look
             // add all the jars that should be included when publishing to maven
             artifact(remapJar) {
                 builtBy remapJar
             }
+            // todo runtime jar
             artifact(sourcesJar) {
                 builtBy remapSourcesJar
             }
