commit fabric jsons
Signed-off-by: Devan-Kerman <dev.sel20@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-/Generate-Classes/src/main/resources/gradle_info.properties
-/Generate-Classes/build/
-/Generate-Classes/.gradle/
+/gradle_info.properties
 /build/
 /.gradle/
+.idea
+/*.iml
