horrible hack fix for default method collision
Signed-off-by: Devan-Kerman <dev.sel20@gmail.com>

--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 buildscript {
     repositories {
         mavenCentral()
-        maven { url = "https://dl.bintray.com/astrarre/maven" }
+        maven { url 'https://dl.bintray.com/astrarre/maven' }
     }
 
     dependencies {
@@ -9,10 +9,9 @@ buildscript {
     }
 }
 
-
 import io.github.astrarre.stripper.Stripper
-
-import java.util.stream.Collectors
+import net.fabricmc.loom.task.RunClientTask
+import net.fabricmc.loom.task.RunServerTask
 
 plugins {
     id 'java'
@@ -24,160 +23,134 @@ plugins {
     id "fabric-loom" version "0.5.42"
 }
 
+group "io.github.astrarre"
+
 version = project.mod_version
+sourceCompatibility = JavaVersion.VERSION_1_8
+targetCompatibility = JavaVersion.VERSION_1_8
 
-subprojects {
-    apply plugin: "java"
-    apply plugin: 'java-library'
-    apply plugin: "java-library"
-    apply plugin: "fabric-loom"
-}
-
-import net.fabricmc.loom.task.RunClientTask
-import net.fabricmc.loom.task.RunServerTask
-
-
-// gross gradle hacks
-task implMod(type: Jar) {
-    classifier = "impl-mod"
-    libsDirName = "misc"
-
-    from zipTree("$rootProject.projectDir/generated/impl.jar")
-    from "$rootProject.projectDir/generated/fabric.mod.json"
-}
+loom.runDir = "run"
 
 allprojects {
-    tasks.withType(JavaCompile).configureEach {
-        def targetVersion = 8
-        if (JavaVersion.current().isJava9Compatible()) {
-            it.options.release = targetVersion
-        } else {
-            sourceCompatibility = JavaVersion.toVersion(targetVersion)
-            targetCompatibility = JavaVersion.toVersion(targetVersion)
-        }
-    }
-
-    group "io.github.astrarre"
-
-    sourceSets {
-        testmod {
-            compileClasspath += main.compileClasspath
-            runtimeClasspath += main.runtimeClasspath
-        }
-    }
-
-    loom {
-        shareCaches = true
-    }
-
     repositories {
         mavenLocal()
         mavenCentral()
-        maven{url 'https://maven.fabricmc.net/'}
-        maven{url 'http://maven.modmuss50.me/'}
-        maven{url 'https://dl.bintray.com/astrarre/maven'}
-        maven{url 'https://jitpack.io'}
-        flatDir {
-            dir rootProject.tasks.implMod.destinationDir
-        }
-    }
-
-    dependencies {
-        minecraft "com.mojang:minecraft:${project.minecraft_version}"
-        mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
-        modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
-
-        // to add compatibility
-        modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
-
-        compileOnly files("$rootProject.projectDir/generated/api.jar")
-        compileOnly files("$rootProject.projectDir/generated/api_sources.jar")
-
-        modImplementation "io.github.astrarre:astrarre-extra:0.0.1"
-
-        fileTree(dir: rootProject.tasks.implMod.destinationDir, include: '*.jar').each {
-            String baseName = it.name.replace(".jar", "")
-            String version = "0.1.0"
-            int split = baseName.lastIndexOf('-')
-            if (split != -1) {
-                version = baseName.substring(split + 1)
-                baseName = baseName.substring(0, split)
-            }
-            String name = "testmod:${baseName}:${version}"
-            System.out.println("Found test mod: " + it.name.replace(".jar", "") + " -> " + name)
-            modRuntime name
-        }
-    }
-
-    tasks.classes.dependsOn rootProject.tasks.implMod
-
-    task runTestmodClient(type: RunClientTask) {
-        classpath sourceSets.testmod.runtimeClasspath
-    }
-
-    task runTestmodServer(type: RunServerTask) {
-        classpath sourceSets.testmod.runtimeClasspath
-    }
-
-    processResources {
-        inputs.property "version", project.version
-
-        from(sourceSets.main.resources.srcDirs) {
-            include "fabric.mod.json"
-            expand "version": project.version
-        }
-
-        from(sourceSets.main.resources.srcDirs) {
-            exclude "fabric.mod.json"
-        }
-    }
-
-
-    task collectedJar(type: Jar, dependsOn: jar) {
-        version "_temp_"
-        // source
-        from sourceSets.main.allSource
-        if (project.rootProject == project)
-            from classes
-        else
-            from jar
-
-        doLast {
-            def file = outputs.files.first()
-            def filter = new ArrayList<String>()
-            filter.add("io/github/astrarre/internal/(.*)")
-            Stripper.strip(filter, file, file)
-        }
+        maven { url 'https://maven.fabricmc.net/' }
+        maven { url 'http://maven.modmuss50.me/' }
+        maven { url 'https://dl.bintray.com/astrarre/maven' }
+        maven { url 'https://jitpack.io' }
     }
 }
 
-task sourcesJar(type: Jar, dependsOn: classes) {
-    archiveClassifier = "sources"
-    allprojects.each {
-        from it.sourceSets.main.allSource
+
+//tasks.dependencies.dependsOn project(":Abstract").runMain todo
+task fakeImpl(type: Jar) {
+    archiveName 'fake_impl.jar'
+    from zipTree("generated/impl.jar")
+    from "generated/fabric.mod.json"
+}
+
+tasks.classes.dependsOn tasks.fakeImpl
+
+dependencies {
+    minecraft "com.mojang:minecraft:${project.minecraft_version}"
+    mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
+    modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
+
+    // to add compatibility
+    modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
+
+    compileOnly files("$projectDir/generated/api.jar")
+    compileOnly files("$projectDir/generated/api_sources.jar")
+
+    modRuntime tasks.fakeImpl.outputs.files
+
+    modImplementation "io.github.astrarre:astrarre-extra:0.0.1"
+
+    // abstraction applicator fabric
+    implementation 'com.github.Chocohead:fabric-asm:v2.1'
+    include 'com.github.Chocohead:fabric-asm:v2.1'
+}
+
+sourceSets {
+    main {
+        resources {
+            srcDir 'generated/include'
+        }
+    }
+    testmod {
+        compileClasspath += main.compileClasspath
+        runtimeClasspath += main.runtimeClasspath
+    }
+}
+
+runClient {
+    classpath 'generated/impl.jar'
+}
+
+runServer {
+    classpath 'generated/impl.jar'
+}
+
+task runTestmodClient(type: RunClientTask) {
+    classpath sourceSets.testmod.runtimeClasspath
+}
+
+task runTestmodServer(type: RunServerTask) {
+    classpath sourceSets.testmod.runtimeClasspath
+}
+
+sourceSets {
+    testmod {
+        runtimeClasspath += main.runtimeClasspath
+        compileClasspath += main.compileClasspath
+    }
+}
+
+processResources {
+    inputs.property "version", project.version
+
+    from(sourceSets.main.resources.srcDirs) {
+        include "fabric.mod.json"
+        expand "version": project.version
+    }
+
+    from(sourceSets.main.resources.srcDirs) {
+        exclude "fabric.mod.json"
     }
 }
 
 jar {
-    from "LICENSE"
     from zipTree("generated/impl.jar")
-    from "generated/manifest.properties"
+    from "generated/include/manifest.properties"
+    from "LICENSE"
 }
 
-dependencies {
-    afterEvaluate {
-        include subprojects
+task strippedJar(type: Zip, dependsOn: jar) {
+    version "_temp_"
+    // source
+    from sourceSets.main.allSource
+    from classes
+
+    doLast {
+        def file = outputs.files.first()
+        def filter = new ArrayList<String>()
+        filter.add("io/github/astrarre/internal/(.*)")
+        Stripper.strip(filter, file, file)
     }
 }
 
 // api jar, what people are supposed to compileOnly depend on
-task apiJar(type: Jar, dependsOn: allprojects.tasks.collectedJar) {
+task apiJar(type: Jar, dependsOn: strippedJar) {
     classifier = "api"
     from zipTree("generated/api_sources.jar")
     from zipTree("generated/api.jar")
-    allprojects.each {
-        from zipTree(it.tasks.collectedJar.archivePath)
-    }
+    with strippedJar
+}
+
+task sourcesJar(type: Jar, dependsOn: classes) {
+    archiveClassifier = "sources"
+    from sourceSets.main.allSource
 }
 
 // configure the maven publication
@@ -185,6 +158,7 @@ publishing {
     publications {
         mavenJava(MavenPublication) {
             artifactId = "impl-fabric"
+            // regular old implementation jar
             artifact(remapJar) {
                 builtBy remapJar
             }
@@ -228,17 +202,12 @@ bintray {
     }
 }
 
-tasks.classes.doLast {
-    def file = new File(this.project.sourceSets.test.resources.srcDirs.first(), "gradle_info.properties")
-    if (!file.exists()) {
-        def properties = new Properties()
-        properties.setProperty("mappings", project.loom.getMappingsProvider().tinyMappings.absolutePath)
-        properties.setProperty("minecraft", configurations.minecraftNamed.resolve().last().absolutePath)
-        properties.setProperty("libraries", configurations.minecraftLibraries.resolve().stream().map() { it.absolutePath }.collect(Collectors.joining(";")))
-        properties.setProperty("projectDir", project.projectDir.absolutePath)
-
-        def out = new FileWriter(file)
-        properties.store(out, "Minecraft Libraries, Emitted by classes task")
-        out.close()
+subprojects {
+    afterEvaluate {
+        dependencies {
+            parent.configurations.minecraftNamed.each {
+                implementation files(it)
+            }
+        }
     }
 }
